--- a/views/article.ejs
+++ b/views/article.ejs
@@ -6,10 +6,14 @@
         <title><%= title %></title>
         <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
         <%- include('../partials/tophead'); %>
+        <section class="text-blueGray-700">
 
-        <%- include('../partials/quicklinks'); %>
-        
+        <%- include('../partials/headline'); %>
+        <%- include('../partials/articlestruct'); %>
+    </section>
     </body>
+
 </html>
