--- a/partials/articlestruct.ejs
+++ b/partials/articlestruct.ejs
@@ -2,13 +2,29 @@
 
             <div class="container flex flex-col items-center px-5 py-8 mx-auto lg:px-64">
               <div>
+                            <div class="container flex flex-col items-center px-3 pt-6 pb-0 mx-auto">
+                              <div class="flex flex-col w-full text-left lg:text-center">
+                                <h2 class="mb-8 text-2xl font-semibold tracking-widest text-black text-left uppercase title-font">Politics</h2>
+                                <h1 class="mx-auto mb-6 text-7xl font-semibold leading-none tracking-tighter text-black text-left sm:text-6xl title-font">France Threatens U.K. Power Supply as Brexit Tensions Escalate</h1>
+                                <p class="text-base font-medium leading-relaxed text-blueGray-700 text-left lg:w-1/2">By <a href="#">John Smith</a> <a href="#">Follow</a></p>
+                                <p class="text-base font-medium leading-relaxed text-bluegray-700 text-left">5 October 2021, 16:50 GMT</p>
+                              </div>
+                            </div>
+
                 <div class="flex flex-wrap py-8 md:flex-nowrap">
                   
                     <!-- side bar with sharing links and related companies -->
-                    <div class="flex flex-col flex-shrink-0 px-2 mb-6 md:w-48 mr-4 md:mb-0 border-2">
-                        <strong class="flex text-3xl font-thin leading-none text-left text-thin lg:text-4xl "> 10 <span class="text-sm">PPI </span>
-                        </strong>
-                        <span class="mt-1 text-xs font-normal leading-relaxed text-blueGray-700">Right. Say that again. No, no, George, look, it's just an act, right?.</span>
+                    <div class="flex flex-col flex-shrink-0 px-2 mb-6 md:w-48 mr-4 md:mb-0">
+                        <p class="text-sm tracking-widest border-t-2">LISTEN TO ARTICLE</p>
+                        <img src="img/player.png">
+                        <hr />
+                        <p class="text-sm tracking-widest border-t-2">SHARE THIS ARTICLE</p>
+                        <ul class="list-inside">
+                          <li>Facebook</li>
+                          <li>Twitter</li>
+                          <li>Post</li>
+                          <li>Email</li>
+                        </ul>
                     </div>
 
                     <!-- beginning of article text -->
